tests/semantic/valid/type_compatibility/widen_int_to_float.src
fn main() {
  float y;
  y = 1;
}
