tests/semantic/invalid/type_mismatch/bool_to_int.src
fn main() {
  int x;
  x = true;
}
